.metadata/.plugins/org.eclipse.cdt.ui/Free_RTOS_Demo.build.log
21:55:11 **** Incremental Build of configuration Debug for project Free_RTOS_Demo ****
make -j8 all 
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/portable/MemMang/heap_4.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/portable/MemMang/heap_4.d" -MT"ThirdParty/FreeRTOS/portable/MemMang/heap_4.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/portable/MemMang/heap_4.o"
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.d" -MT"ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.o"
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/croutine.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/croutine.d" -MT"ThirdParty/FreeRTOS/croutine.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/croutine.o"
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/event_groups.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/event_groups.d" -MT"ThirdParty/FreeRTOS/event_groups.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/event_groups.o"
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/list.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/list.d" -MT"ThirdParty/FreeRTOS/list.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/list.o"
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/queue.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/queue.d" -MT"ThirdParty/FreeRTOS/queue.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/queue.o"
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/stream_buffer.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/stream_buffer.d" -MT"ThirdParty/FreeRTOS/stream_buffer.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/stream_buffer.o"
arm-none-eabi-gcc "../ThirdParty/FreeRTOS/tasks.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I"C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS" -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"ThirdParty/FreeRTOS/tasks.d" -MT"ThirdParty/FreeRTOS/tasks.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "ThirdParty/FreeRTOS/tasks.o"
In file included from C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/include/FreeRTOS.h:59,
                 from ../ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.c:34:
../ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.c: In function 'vPortSetupTimerInterrupt':
C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/FreeRTOSConfig.h:53:59: error: 'SystemCoreClock' undeclared (first use in this function)
   53 | #define configCPU_CLOCK_HZ                              ( SystemCoreClock )
      |                                                           ^~~~~~~~~~~~~~~
../ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.c:42:41: note: in expansion of macro 'configCPU_CLOCK_HZ'
   42 |     #define configSYSTICK_CLOCK_HZ      configCPU_CLOCK_HZ
      |                                         ^~~~~~~~~~~~~~~~~~
../ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.c:706:35: note: in expansion of macro 'configSYSTICK_CLOCK_HZ'
  706 |     portNVIC_SYSTICK_LOAD_REG = ( configSYSTICK_CLOCK_HZ / configTICK_RATE_HZ ) - 1UL;
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
C:/Users/LENOVO/Desktop/FreeRTOS_Workspace/Free_RTOS_Demo/ThirdParty/FreeRTOS/FreeRTOSConfig.h:53:59: note: each undeclared identifier is reported only once for each function it appears in
   53 | #define configCPU_CLOCK_HZ                              ( SystemCoreClock )
      |                                                           ^~~~~~~~~~~~~~~
../ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.c:42:41: note: in expansion of macro 'configCPU_CLOCK_HZ'
   42 |     #define configSYSTICK_CLOCK_HZ      configCPU_CLOCK_HZ
      |                                         ^~~~~~~~~~~~~~~~~~
../ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.c:706:35: note: in expansion of macro 'configSYSTICK_CLOCK_HZ'
  706 |     portNVIC_SYSTICK_LOAD_REG = ( configSYSTICK_CLOCK_HZ / configTICK_RATE_HZ ) - 1UL;
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
make: *** [ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/subdir.mk:19: ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F/port.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

21:55:14 Build Failed. 3 errors, 0 warnings. (took 3s.61ms)

